--- a/src/Components/shows.css
+++ b/src/Components/shows.css
@@ -131,6 +131,12 @@ header {
         grid-template-columns: auto auto auto;
     }
 }
+@media screen and (min-width: 800px) {
+    .Shows {
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+}
 
 
 @media screen and (min-width: 1200px) {
